--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "node ./scripts/create_redirect.cjs",
     "start": "next start",
     "lint": "next lint"
   },
