--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mdast-util-to-string": "^3.1.0",
     "mdx-annotations": "^0.1.1",
     "next": "13.2.3",
+    "next-plausible": "^3.7.2",
     "postcss-focus-visible": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
